--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm-run-all --parallel start:static-server start:dynamic-server",
+    "start:static-server": "node ./frontend/index.js",
+    "start:dynamic-server": "node ./backend/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
     "url": "https://github.com/vitorluuiz/Circlesbox.js/issues"
   },
   "homepage": "https://github.com/vitorluuiz/Circlesbox.js#readme",
-  "dependencies": {
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
